k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fullstack-app
  labels:
    name: fullstack-app
    app: fullstack-nodejs-app
    environment: production
